# CS543_Project

./: .env  README.md  box.py  boxCoordinates.py  calibration.pkl  cameraMatrix.pkl  capture_intermediate_images.py  chess_pipeline.py  chess_pipeline_from_image.py  chess_pipeline_iphone.py  chess_pipeline_network.py  cobot_control.py  detect_aruco_distance.py  detection.json  dist.pkl  llm.py  moveDetection.py  pipeline_diagram.tex  pyproject.toml  test_moves.py  test_vlm_api.py  untitled2.py  yolo_training.py
